[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/bug/bug.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/obstacle/obstacle_bramble.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/board/board.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/trap/trap_apple.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/trap/trap_carrot.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/trap/trap_cheese.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/trap/trap_cookie.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/obstacle/obstacle_rock.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/obstacle/obstacle_wood.tscn" type="PackedScene" id=9]
[ext_resource path="res://main.gd" type="Script" id=10]
[ext_resource path="res://resources/dice/dice.tscn" type="PackedScene" id=11]
[ext_resource path="res://resources/fonts/pixeboy.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://resources/coin/coin.tscn" type="PackedScene" id=13]
[ext_resource path="res://resources/door/door.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/current_player/current_player.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 12 )

[node name="Main" type="Node2D"]
script = ExtResource( 10 )

[node name="Board" parent="." instance=ExtResource( 3 )]

[node name="Dice" parent="." instance=ExtResource( 11 )]
position = Vector2( 80, 240 )

[node name="Bug" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 240 )

[node name="BugStartPosition" type="Position2D" parent="."]
position = Vector2( 464, 240 )

[node name="Doors" type="Node" parent="."]

[node name="apple" parent="Doors" instance=ExtResource( 14 )]
position = Vector2( 688, 420 )

[node name="carrot" parent="Doors" instance=ExtResource( 14 )]
position = Vector2( 688, 60 )

[node name="cheese" parent="Doors" instance=ExtResource( 14 )]
position = Vector2( 240, 60 )

[node name="cookie" parent="Doors" instance=ExtResource( 14 )]
position = Vector2( 240, 420 )

[node name="Traps" type="Node" parent="."]

[node name="apple" parent="Traps" instance=ExtResource( 4 )]
position = Vector2( 724, 284 )

[node name="carrot" parent="Traps" instance=ExtResource( 5 )]
position = Vector2( 724, 196 )

[node name="cheese" parent="Traps" instance=ExtResource( 6 )]
position = Vector2( 204, 196 )

[node name="cookie" parent="Traps" instance=ExtResource( 7 )]
position = Vector2( 204, 284 )

[node name="Obstacles" type="Node" parent="."]

[node name="ObstacleBramble" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 576, 72 )

[node name="ObstacleBramble5" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 576, 184 )

[node name="ObstacleBramble4" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 352, 408 )

[node name="ObstacleBramble3" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 352, 184 )

[node name="ObstacleBramble2" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 296, 128 )
rotation = 1.5708

[node name="ObstacleBramble7" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 408, 352 )
rotation = 1.5708

[node name="ObstacleBramble8" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 632, 352 )
rotation = 1.5708

[node name="ObstacleBramble6" parent="Obstacles" instance=ExtResource( 2 )]
position = Vector2( 520, 240 )
rotation = 1.5708

[node name="ObstacleRock" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 464, 72 )

[node name="ObstacleRock8" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 464, 408 )

[node name="ObstacleRock3" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 352, 296 )

[node name="ObstacleRock7" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 576, 296 )

[node name="ObstacleRock2" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 296, 240 )
rotation = 1.5708

[node name="ObstacleRock6" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 632, 240 )
rotation = 1.5708

[node name="ObstacleRock5" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 408, 240 )
rotation = 1.5708

[node name="ObstacleRock4" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 520, 128 )
rotation = 1.5708

[node name="ObstacleWood" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 352, 72 )

[node name="ObstacleWood8" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 576, 408 )

[node name="ObstacleWood6" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 464, 296 )

[node name="ObstacleWood3" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 464, 184 )

[node name="ObstacleWood2" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 296, 352 )
rotation = 1.5708

[node name="ObstacleWood7" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 520, 352 )
rotation = 1.5708

[node name="ObstacleWood5" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 632, 128 )
rotation = 1.5708

[node name="ObstacleWood4" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 408, 128 )
rotation = 1.5708

[node name="Players" type="Node" parent="."]

[node name="PlayerOne" type="Node" parent="Players"]

[node name="Coin" parent="Players/PlayerOne" instance=ExtResource( 13 )]
position = Vector2( 80, 80 )

[node name="Label" type="Label" parent="Players/PlayerOne"]
margin_left = 32.0
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwo" type="Node" parent="Players"]

[node name="Coin" parent="Players/PlayerTwo" instance=ExtResource( 13 )]
position = Vector2( 80, 368 )

[node name="Label" type="Label" parent="Players/PlayerTwo"]
margin_left = 32.0
margin_top = 448.0
margin_right = 128.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 1 )
text = "Player 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentPlayer" parent="." instance=ExtResource( 15 )]
position = Vector2( 576, 428 )

[connection signal="catched" from="Bug" to="." method="_on_Bug_catched"]
[connection signal="target_reached" from="Players/PlayerOne/Coin" to="." method="_on_Coin_target_reached"]
[connection signal="target_reached" from="Players/PlayerTwo/Coin" to="." method="_on_Coin_target_reached"]
